[package]
name = "permafrost"
description = "A permutation group library"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jix/permafrost"
readme = "README.md"
edition = "2018"

[dependencies]
num-traits = "0.2.6"
num-integer = "0.1.39"

[dev-dependencies]
proptest = "0.8.7"
